force-app/main/default/objects/Operating_Snapshot__c/Operating_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores operational telemetry every 15 minutes.</description>
    <label>Operating Snapshot</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>