force-app/main/default/objects/Operating_Snapshot__c/fields/Energy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Energy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Energy Asset</label>
    <referenceTo>RenewAI_Energy_Asset__c</referenceTo>
    <relationshipLabel>Operating Snapshot</relationshipLabel>
    <relationshipName>Operating_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>