force-app/main/default/objects/Operating_Snapshot__c/fields/Generation_MW__c.field-meta.xml
<CustomField>
    <fullName>Generation_MW__c</fullName>
    <label>Generation MW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>