force-app/main/default/objects/Operating_Snapshot__c/fields/Grid_Frequency_Hz__c.field-meta.xml
<CustomField>
    <fullName>Grid_Frequency_Hz__c</fullName>
    <label>Grid Frequency Hz</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>