force-app/main/default/objects/Operating_Snapshot__c/fields/Weather_Score__c.field-meta.xml
<CustomField>
    <fullName>Weather_Score__c</fullName>
    <label>Weather Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>