force-app/main/default/objects/Operating_Snapshot__c/validationRules/Generation_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Generation_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Generation_MW__c &lt; 0</errorConditionFormula>
    <errorMessage>Generation cannot be negative.</errorMessage>
</ValidationRule>